Fixed about img border on mobile
fixed about img for mobile viewing

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -484,14 +484,7 @@ b, strong {
   .about-image {
     margin-top: 4em;
   }
-  .about-image
-  {
-    height: 300px;
-    width: 300px;
-    border-radius: 50%;
-    border:10px solid #1f1f1f;
-  }
-
+ 
   .mobile-mt-2,
   .contact-form {
     margin-top: 2em;
